fix overflow of background color

--- a/src/content/features/YTDLiveChat/styles/YTDLiveChatSetting/YTDLiveChatSetting.module.scss
+++ b/src/content/features/YTDLiveChat/styles/YTDLiveChatSetting/YTDLiveChatSetting.module.scss
@@ -9,6 +9,7 @@
   letter-spacing: 0.05rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  overflow: hidden;
 
   .header {
     display: flex;
